--- a/media/css/style.css
+++ b/media/css/style.css
@@ -228,7 +228,7 @@ body {
 }
 
 #hero {
-	background:#678 url(../img/hero.gif);
+	background:#678 url('../img/hero.gif?v=1');
 	height:210px;
 	margin:-10px 0 10px;
 }
@@ -240,7 +240,7 @@ body {
 #hero p {
 	color:#fff;
 	font-size:11px;
-	margin:55px 35px;
+	margin:70px 35px;
 	text-align:center;
 }
 
@@ -280,6 +280,8 @@ section {
 }
 
 #content h2 {
+	color:#1C3B5B;
+	font-weight:bold;
 	font-size:16px;
 	margin:35px 0 -5px 0;
 }
