--- a/media/css/style.css
+++ b/media/css/style.css
@@ -240,8 +240,7 @@ body {
 #hero p {
 	color:#fff;
 	font-size:11px;
-	margin:70px 35px;
-	text-align:center;
+	margin:52px 35px 0 303px;
 }
 
 #hero a {
