--- a/media/css/style.css
+++ b/media/css/style.css
@@ -228,8 +228,8 @@ body {
 }
 
 #hero {
-	background:#678 url('../img/hero.gif?v=1');
-	height:210px;
+	background:#678 url('../img/headjs.gif');
+	height:190px;
 	margin:-10px 0 10px;
 }
  
@@ -238,9 +238,9 @@ body {
 }
 
 #hero p {
-	color:#fff;
+	color:#C8C8C8;
 	font-size:11px;
-	margin:52px 35px 0 303px;
+	margin:25px 36px 0 322px;
 }
 
 #hero a {
