--- a/media/css/style.css
+++ b/media/css/style.css
@@ -1,322 +1,494 @@
-
-/* :mode=css: */
-
-
-/*
-	:mode=css:
-	the absolute minimal CSS reset	 
-	http://www.vcarrer.com/2010/05/css-mini-reset.html
-	thanks: luminarious
-*/
-
-* { 
-	vertical-align: baseline; 
-	font-weight: inherit; 
-	font-family: inherit; 
-	font-style: inherit; 
-	text-decoration:inherit;
-	font-size: 100%;
-	padding: 0;
-	border: 0; 	 
-	margin: 0;	
+* {
+  vertical-align: baseline;
+  font-weight: inherit;
+  font-family: inherit;
+  font-style: inherit;
+  text-decoration: inherit;
+  font-size: 100%;
+  padding: 0;
+  border: 0;
+  margin: 0;
 }
-
 table {
-	border-collapse: collapse;	
+  border-collapse: collapse;
 }
-
 :focus {
-	outline: 0;
+  outline: 0;
 }
-
 ::-moz-focus-inner {
-	border: 0;
+  border: 0;
 }
-
-
-/* :mode=css: */
-
-/* HTML5 elements */
-article, aside, details, footer, header, hgroup, menu, nav, section { 
-	display:block;
-}
-
-/* bolded */
-strong, b, th, dt { font-weight: bold; }
-
-/* italic */
-em, i, caption {
-	font-style:italic;		
-}
-
-/* code */
-pre, code {
-	font-family:"courier new",monospace;	
-}
-
-/* margin for block level elements */
-p, table, ul, ol {
-	margin:0.8em 0;		
-}
-
-li {
-	margin-left:1.6em;		
-}
-
-blockquote {
-	margin:1.5em;		
-}
-
-/* horizontal rule */
-hr {
-	border:1px solid #ddd;
-	border-width:1px 0 0;
-	margin:1em 0;	
-}
-
-/* clearfix */
-.clear, .clearfix { 
-	zoom: 1; 
-}
-
-.clear:after, .clearfix:after { 
-	content: "\0020"; 
-	display: block; 
-	height: 0; 
-	clear: both; 
-	visibility: hidden; 
-}
-
-
-/* :mode=css: */
-
-/* headings */
-h1,h2,h3,h4,h5,h6 {
-	margin:2% 0 -1% 0;		
-}
-
-h1 {
-	font-size: 2.2em;
-	line-height: 1.1;
-}
-
-h2 {
-	font-size: 1.8em;
-	line-height: 1.15;
-}
-
-h3 {
-	font-size: 1.5em;
-	line-height: 1.2;
-}
-
-h4, h5, h6 {
-	font-size: 1em;
-	font-weight:bold;
-}
-
-/*
-	Important class names to be used everywhere.
-	Thanks: blueprint	css framework
-*/
-
-.large      	{ font-size: 130%; }
-.small,small	{ font-size: 80%; }
-.hide       	{ display: none; }
-
-.quiet      	{ color: #777; }
-.loud       	{ color: #000; }
-.highlighted  	{ background:#ff0; }
-
-.dark				{ background-color:#222; color:#fff; }
-.light			{ background-color:#f9f9f9; }
-.dark a 			{ color:#ceff00; }
-            	
-.first      	{ margin-left:0; padding-left:0; }
-.last       	{ margin-right:0; padding-right:0; }
-.top        	{ margin-top:0; padding-top:0; }
-.bottom     	{ margin-bottom:0; padding-bottom:0; }                                                  
-
-
-.c, .cm { color: #998; font-style: italic } /* Comments */
-.err { color: #a61717; background-color: #e3d2d2 } /* Error */
-.k { font-weight: bold } /* Keyword */
-.o { font-weight: bold } /* Operator */
-.cp { color: #999; font-weight: bold } /* Comment.Preproc */
-.c1 { color: #998; font-style: italic } /* Comment.Single */
-.cs { color: #999; font-weight: bold; font-style: italic } /* Comment.Special */
-.gd { color: #000; background-color: #ffdddd } /* Generic.Deleted */
-.gd .x { color: #000; background-color: #ffaaaa } /* Generic.Deleted.Specific */
-.ge { font-style: italic } /* Generic.Emph */
-.gr { color: #a00 } /* Generic.Error */
-.gh { color: #999 } /* Generic.Heading */
-.gi { color: #000; background-color: #ddffdd } /* Generic.Inserted */
-.gi .x { color: #000; background-color: #aaffaa } /* Generic.Inserted.Specific */
-.go { color: #888 } /* Generic.Output */
-.gp { color: #555 } /* Generic.Prompt */
-.gs { font-weight: bold } /* Generic.Strong */
-.gu { color: #aaaaaa } /* Generic.Subheading */
-.gt { color: #a00 } /* Generic.Traceback */
-.kc { font-weight: bold } /* Keyword.Constant */
-.kd { font-weight: bold } /* Keyword.Declaration */
-.kp { font-weight: bold } /* Keyword.Pseudo */
-.kr { font-weight: bold } /* Keyword.Reserved */
-.kt { color: #445588; font-weight: bold } /* Keyword.Type */
-.m { color: #099 } /* Literal.Number */
-.s { color: #d14 } /* Literal.String */
-.na { color: #008080 } /* Name.Attribute */
-.nb { color: #0086B3 } /* Name.Builtin */
-.nc { color: #445588; font-weight: bold } /* Name.Class */
-.no { color: #008080 } /* Name.Constant */
-.ni { color: #800080 } /* Name.Entity */
-.ne { color: #900; font-weight: bold } /* Name.Exception */
-.nf { color: #900; font-weight: bold } /* Name.Function */
-.nn { color: #555 } /* Name.Namespace */
-.nt { color: #000080 } /* Name.Tag */
-.nv { color: #008080 } /* Name.Variable */
-.ow { font-weight: bold } /* Operator.Word */
-.w { color: #bbb } /* Text.Whitespace */
-.mf { color: #099 } /* Literal.Number.Float */
-.mh { color: #099 } /* Literal.Number.Hex */
-.mi { color: #099 } /* Literal.Number.Integer */
-.mo { color: #099 } /* Literal.Number.Oct */
-.sb { color: #d14 } /* Literal.String.Backtick */
-.sc { color: #d14 } /* Literal.String.Char */
-.sd { color: #d14 } /* Literal.String.Doc */
-.s2 { color: #d14 } /* Literal.String.Double */
-.se { color: #d14 } /* Literal.String.Escape */
-.sh { color: #d14 } /* Literal.String.Heredoc */
-.si { color: #d14 } /* Literal.String.Interpol */
-.sx { color: #d14 } /* Literal.String.Other */
-.sr { color: #009926 } /* Literal.String.Regex */
-.s1 { color: #d14 } /* Literal.String.Single */
-.ss { color: #990073 } /* Literal.String.Symbol */
-.bp { color: #999 } /* Name.Builtin.Pseudo */
-.vc { color: #008080 } /* Name.Variable.Class */
-.vg { color: #008080 } /* Name.Variable.Global */
-.vi { color: #008080 } /* Name.Variable.Instance */
-.il { color: #099 } /* Literal.Number.Integer.Long */
-
-
-
-html {
-	background-color:#f9f9f9;		
-}
-
 body {
-	margin:50px auto; 
-	width:982px;
-	color:#333;
-	font:13px sans-serif;
-} 
- 
-#fork {
-	position: absolute; 
-	top: 0; 
-	right: 0;	 
-} 
-
-#content, #hero, .highlight {
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;		
+  font: 14px sans-serif;
+  line-height: 1.22;
 }
-
-#content, #hero {
-	-moz-box-shadow: 0 0 5px rgba(0,0,0,.2);
-	-webkit-box-shadow: 0 0 5px rgba(0,0,0,.2);
-}
-
-#hero {
-	background:#678 url('../img/headjs.gif');
-	height:190px;
-	margin:-10px 0 10px;
-}
- 
-#hero h1, #hero h2, #hero h3 {
-	visibility:hidden;		
-}
-
-#hero p {
-	color:#C8C8C8;
-	font-size:11px;
-	margin:20px 36px 0 322px;
-}
-
-#hero a {
-	color:#777;		
-}
-
-nav, footer {
-	margin:5px 0;	
-	text-align:center;	
-}
-
-nav a, footer a {
-	color:#777;
-	font-size:11px;
-	margin:0 5px;
-}
-
-#content {
-	background-color:#fff;	
-}
- 
-#content h1 {
-	float:left;
-	width:180px;
-	font-weight:normal;
-	margin:5px 0 0 25px;
-	font-size:24px;	
-	color:#777;
-}
-
+article,
+aside,
+details,
+footer,
+header,
+hgroup,
+mark,
+menu,
+nav,
 section {
-	float:left;
-	width:720px;
-	clear:right;
-	margin:5px 0 50px 0;	
+  display: block;
 }
-
-#content h2 {
-	color:#1C3B5B;
-	font-weight:bold;
-	font-size:16px;
-	margin:35px 0 -5px 0;
+strong,
+b,
+dt {
+  font-weight: bold;
 }
-
-#content h3 {
-	font-size:13px;
-	font-weight:bold;
-	color:#555;
-	margin-top:20px;
+em,
+i,
+caption {
+  font-style: italic;
 }
-
-#content section :first-child { 
-	margin-top:0;
-}  
-
+mark {
+  background-color: #ff0;
+}
+pre,
+code {
+  font-family: "courier new", monospace;
+}
+p,
+table,
+ul,
+ol,
+hr,
+dd {
+  margin: 1em 0;
+}
+li {
+  margin-left: 2em;
+}
+blockquote {
+  margin: 2em;
+}
+hr {
+  border: 1px solid #ddd;
+  border-width: 1px 0 0;
+}
+td,
+th {
+  padding: 0.3em 0.5em 0.3em 0.4em;
+}
+th {
+  font-weight: bold;
+  text-align: left;
+}
+input,
+select,
+textarea {
+  font-size: 99%;
+  padding: 0.2em;
+  border: 1px solid;
+  border-color: #ccc #eee #eee #ccc;
+}
+input[type="checkbox"],
+input[type="radio"] {
+  vertical-align: text-top;
+  border: 0;
+}
+label {
+  cursor: pointer;
+}
+textarea {
+  width: 100%;
+}
+select {
+  background-color: #fff;
+}
+button,
+input[type="button"] {
+  padding: 0.2em 0.5em;
+  border: 1px outset #ddd;
+  cursor: pointer;
+}
+button:active,
+input[type="button"]:active {
+  border: 1px inset #ddd;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+dt {
+  margin: 1.5em 0 -0.5em 0;
+}
+h1 {
+  font-size: 2.2em;
+  line-height: 1.1;
+}
+h2 {
+  font-size: 1.8em;
+  line-height: 1.15;
+}
+h3 {
+  font-size: 1.5em;
+  line-height: 1.2;
+}
+h4,
+h5,
+h6 {
+  font-weight: bold;
+}
+.large {
+  font-size: 1.3em;
+  line-height: 1.3;
+}
+.small,
+small {
+  font-size: 0.8em;
+}
+.hidden {
+  display: none;
+}
+.loud {
+  color: #111;
+}
+.quiet {
+  color: #777;
+}
+.dark {
+  background-color: #333;
+  color: #fff;
+}
+.dark a {
+  color: #ceff00;
+}
+.light {
+  background-color: #f9f9f9;
+}
+.top {
+  margin-top: 0 !important;
+}
+.bottom {
+  margin-bottom: 0 !important;
+}
+.left {
+  float: left;
+}
+.right {
+  float: right;
+}
+.first {
+  margin-left: 0 !important;
+}
+.last {
+  margin-right: 0 !important;
+}
+.clear:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
+}
+.clear {
+  display: block;
+}
+* html .clear {
+  height: 1%;
+}
+input,
+select,
+textarea {
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+}
+button {
+  font-weight: bold;
+  padding: 0.2em 1em;
+  text-shadow: 0 1px 1px #fff;
+  -webkit-border-radius: 11px;
+  -moz-border-radius: 11px;
+  border-radius: 11px;
+  background-color: #fff;
+  background-image: -moz-linear-gradient(#fff, #ddd);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fff), to(#ddd));
+}
+button:active {
+  -moz-box-shadow: 0 0 3px #06f;
+  -webkit-box-shadow: 0 0 3px #06f;
+}
+.code figcaption {
+  float: right;
+  margin: -17px 10px 0 0;
+  color: #ccc;
+  font-size: 11px;
+  text-shadow: 0 0 1px #fff;
+}
 .highlight {
-	background-color:#f9f9f9;
-	border:1px dotted #ddd;
-	padding:10px;
-	margin-bottom:-20px;
+  overflow-x: auto;
 }
-
+.c,
+.cm {
+  color: #998;
+  font-style: italic;
+}
+.err {
+  color: #a61717;
+  background-color: #e3d2d2;
+}
+.k,
+.o {
+  font-weight: bold;
+}
+.o {
+  font-weight: bold;
+}
+.cp {
+  color: #999;
+  font-weight: bold;
+}
+.c1 {
+  color: #998;
+  font-style: italic;
+}
+.cs {
+  color: #999;
+  font-weight: bold;
+  font-style: italic;
+}
+.s {
+  color: #d14;
+}
+.ow {
+  font-weight: bold;
+}
+.w {
+  color: #bbb;
+}
+.m,
+.mi,
+.mf,
+.mh,
+.mo,
+.il {
+  color: #099;
+}
+.sb,
+.sc,
+.sd,
+.s2,
+.se,
+.sh,
+.si,
+.sx,
+s1 {
+  color: #d14;
+}
+.sr {
+  color: #009926;
+}
+.ss {
+  color: #990073;
+}
+.kc,
+.kd,
+.kp,
+.kr,
+.kt {
+  font-weight: bold;
+}
+.kt {
+  color: #458;
+}
+.vc,
+.vg,
+.vi,
+.na {
+  color: #008080;
+}
+.na {
+  color: #008080;
+}
+.nb {
+  color: #0086b3;
+}
+.nc {
+  color: #458;
+  font-weight: bold;
+}
+.ne {
+  color: #900;
+  font-weight: bold;
+}
+.nf {
+  color: #900;
+  font-weight: bold;
+}
+.nn {
+  color: #555;
+}
+.no {
+  color: #008080;
+}
+.ni {
+  color: #800080;
+}
+.nt {
+  color: #000080;
+}
+.nv {
+  color: #008080;
+}
+.bp {
+  color: #999;
+}
+.gd {
+  color: #000;
+  background-color: #fdd;
+}
+.gd .x {
+  color: #000;
+  background-color: #faa;
+}
+.ge {
+  font-style: italic;
+}
+.gr {
+  color: #a00;
+}
+.gh {
+  color: #999;
+}
+.gi {
+  color: #000;
+  background-color: #dfd;
+}
+.gi .x {
+  color: #000;
+  background-color: #afa;
+}
+.go {
+  color: #888;
+}
+.gp {
+  color: #555;
+}
+.gs {
+  font-weight: bold;
+}
+.gu {
+  color: #aaa;
+}
+.gt {
+  color: #a00;
+}
+html {
+  background-color: #f9f9f9;
+}
+body {
+  margin: 50px auto;
+  width: 982px;
+  color: #333;
+  font: 13px sans-serif;
+}
+#fork {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+#content {
+  padding-top: 45px;
+}
+#content,
+#hero,
+.highlight {
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+#content,
+#hero {
+  -moz-box-shadow: 0 0 5px rgba(0,0,0,0.2);
+  -webkit-box-shadow: 0 0 5px rgba(0,0,0,0.2);
+}
+#hero {
+  background: #678 url("../img/headjs.gif");
+  height: 190px;
+  margin: -10px 0 10px;
+}
+#hero h1,
+#hero h2,
+#hero h3 {
+  visibility: hidden;
+}
+#hero p {
+  color: #c8c8c8;
+  font-size: 11px;
+  margin: 20px 36px 0 322px;
+}
+#hero a {
+  color: #777;
+}
+nav,
+footer {
+  margin: 5px 0;
+  text-align: center;
+}
+nav a,
+footer a {
+  color: #777;
+  font-size: 11px;
+  margin: 0 5px;
+}
+#content {
+  background-color: #fff;
+}
+#content h1 {
+  float: left;
+  width: 180px;
+  font-weight: normal;
+  margin: 5px 0 0 25px;
+  font-size: 24px;
+  color: #777;
+}
+section {
+  float: left;
+  width: 720px;
+  clear: right;
+  margin: 5px 0 50px 0;
+}
+#content h2 {
+  color: #1c3b5b;
+  font-weight: bold;
+  font-size: 16px;
+  margin: 35px 0 -5px 0;
+}
+#content h3 {
+  font-size: 13px;
+  font-weight: bold;
+  color: #555;
+  margin-top: 20px;
+}
+#content section :first-child {
+  margin-top: 0;
+}
+.highlight {
+  background-color: #f9f9f9;
+  border: 1px dotted #ddd;
+  padding: 10px;
+  margin-bottom: -20px;
+}
 a {
-	color:#445588;
+  color: #458;
 }
-
 a:hover {
-	text-decoration:underline;		
+  text-decoration: underline;
 }
-
-li code, li a {
-	font-weight:bold;
+li code,
+li a {
+  font-weight: bold;
 }
-
-#api h3, code {
-	color:#458;
-	font-family:"andale mono",monospace;	
+#api h3,
+code {
+  color: #458;
+  font-family: "andale mono", monospace;
 }
-
