--- a/test/style.css
+++ b/test/style.css
@@ -1,4 +1,3 @@
-
 html {
     background-color: #f9f9f9;
 }
@@ -33,9 +32,12 @@ body {
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
+    -moz-box-shadow: 0 0 5px #000000;
     -moz-box-shadow: 0 0 5px rgba(0,0,0,.2);
+    -webkit-box-shadow: 0 0 5px #000000;
     -webkit-box-shadow: 0 0 5px rgba(0,0,0,.2);
 }
+
 h1 {
     color: #777;
     font-size: 40px;
@@ -79,9 +81,8 @@ h1 em {
 .clear, .clearfix {
     zoom: 1;
 }
-
     .clear:after, .clearfix:after {
-        content: "\0020";
+    content: " ";
         display: block;
         height: 0;
         clear: both;
